Prevented horizontal scrolling on the features page

--- a/public/css/splash.css
+++ b/public/css/splash.css
@@ -2,6 +2,7 @@ body {
     font-family: Roboto, sans-serif;
     line-height: 1.6;
     background-color: #fff;
+    overflow-x: hidden;
 }
 .center-block {
     margin: 0 auto!;
@@ -235,7 +236,6 @@ section.features1 .col-md-5, section.features4 .col-md-5{
 section.features4 {
     padding-bottom: 0;
 }
-
 
 section.features.upper-footer {
         background-color: #fad129;
@@ -733,6 +733,7 @@ footer.footer form#mad_mimi_signup_form input {
         margin-bottom: 10px;
     }
     
+    
     section.features, section.blue, section, section.secure, section.about, section.team, section.contact {
         padding: 40px 0;
         margin: 0 !important;
@@ -764,7 +765,6 @@ padding: 20px 0 0 0;
        section.features-splash {
 margin-top: -20px !important; 
 }
-    
     section.features .col-md-7 img{
        max-width: 100%;
         margin: 0;
